--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -3,10 +3,12 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src",
-    "composite": true,
-    "declaration": true,
+    "jsx": "react-jsx",
     "noEmit": false
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "references": [
+    { "path": "../sim" }
+  ]
 }
