--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "format": "prettier -w ."
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@eslint/js": "^9",
     "@types/node": "^20",
+    "@typescript-eslint/eslint-plugin": "^8",
+    "@typescript-eslint/parser": "^8",
     "eslint": "^9",
     "eslint-config-prettier": "^9",
     "prettier": "^3",
